--- a/html-css-javascript-getting-started-start/index.html
+++ b/html-css-javascript-getting-started-start/index.html
@@ -40,7 +40,7 @@
             <img src="images/banner.png" alt="Bethany's Pie Shop" class="banner">
             <h1>Welcome to Bethany's Pie Shop</h1>
             <p class="sub-title">
-                From pecan to plum, our pies are are made in with the warmth and tradition of home. Take a moment to <a href="pies.html">browse our pies</a> and see which of our delectable desserts are soon to arrive on your doorstep.
+                From pecan to plum, our pies are are made in with the warmth and tradition of home.<br> Take a moment to <a href="pies.html">browse our pies</a> and see which of our delectable desserts are soon to arrive on your doorstep.
             </p>
         </article>
     </main>
